# resume_demo

./: .gitignore  manage.py  pyproject.toml
main/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
main/migrations/: 0001_initial.py
main/templates/main/: base.html  blog-detail.html  blog.html  contact.html  index.html  portfolio-detail.html  portfolio.html
main/templates/main/partials/: footer.html  messages.html  nav.html
resume_demo/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
