[tool.poetry]
name = "resume-demo"
version = "0.1.0"
description = ""
authors = ["James Sheldon <jimsheldon@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.3"
pillow = "^10.2.0"
django-ckeditor = "^6.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
